--- a/Index.html
+++ b/Index.html
@@ -62,7 +62,7 @@
                 </form>
             </div>
         </nav>
-<!-- carousel section -->
+        <!-- carousel section -->
         <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-indicators">
                 <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
@@ -128,7 +128,7 @@
             </button>
         </div>
     </section>
-<!-- abiut section -->
+    <!-- abiut section -->
     <section>
         <div class="container-fluid ">
             <h1 class="display-3 text-center pt-4 pb-1">District</h1>
@@ -380,6 +380,7 @@
                         blanditiis unde ad nulla recusandae ipsam deleniti animi similique! Fuga nisi hic beatae sunt
                         dolores aut nam, nesciunt non corporis!</p>
                     <button type="button" class="btn btn-primary mt-4 button1">Wana Know more.</button>
+                    <!-- kakhajshj -->
 
 
                 </div>
@@ -490,77 +491,77 @@
 
                 </div>
 
-            </div>
+        </div>
 
-            <div class="row mt-5 ">
+        <div class="row mt-5 ">
 
-                <div class="col-lg-6 mt-4">
-                    <!-- <img class="img1 mx-5" src="./Images/2185156.jpg" alt="Error"> -->
-                    <div id="demo" class="carousel slide" data-bs-ride="carousel">
+            <div class="col-lg-6 mt-4">
+                <!-- <img class="img1 mx-5" src="./Images/2185156.jpg" alt="Error"> -->
+                <div id="demo" class="carousel slide" data-bs-ride="carousel">
 
-                        <!-- The slideshow/carousel -->
-                        <div class="carousel-inner img1div">
-                            <div class="carousel-item active">
-                                <img src="./Images/triund.jpg" alt="Error" class="d-block abc">
-                            </div>
-                            <div class="carousel-item">
-                                <img src="./Images/triund1.jpg" alt="Error" class="d-block abc">
-                            </div>
-                            <div class="carousel-item">
-                                <img src="./Images/triund2.jpg" alt="Error" class="d-block abc">
-                            </div>
+                    <!-- The slideshow/carousel -->
+                    <div class="carousel-inner img1div">
+                        <div class="carousel-item active">
+                            <img src="./Images/triund.jpg" alt="Error" class="d-block abc">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="./Images/triund1.jpg" alt="Error" class="d-block abc">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="./Images/triund2.jpg" alt="Error" class="d-block abc">
                         </div>
                     </div>
-
                 </div>
 
-                <div class="col-lg-5">
-                    <h1 class="img2heading mt-5 ">Kinnaur</h1>
-                    <p class="img2para mt-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas iste
-                        blanditiis unde ad nulla recusandae ipsam deleniti animi similique! Fuga nisi hic beatae sunt
-                        dolores aut nam, nesciunt non corporis!</p>
-                    <button type="button" class="btn btn-primary mt-4 button1">Wana Know more.</button>
+            </div>
 
-
-                </div>
-
+            <div class="col-lg-5">
+                <h1 class="img2heading mt-5 ">Kinnaur</h1>
+                <p class="img2para mt-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas iste
+                    blanditiis unde ad nulla recusandae ipsam deleniti animi similique! Fuga nisi hic beatae sunt
+                    dolores aut nam, nesciunt non corporis!</p>
+                <button type="button" class="btn btn-primary mt-4 button1">Wana Know more.</button>
 
 
             </div>
 
-            <div class="row mt-5 ">
-
-                <div class="col-lg-6 img1div">
-                    <h1 class="img1heading mt-5 ">Solan</h1>
-                    <p class="img1para mt-4 ">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas iste
-                        blanditiis unde ad nulla recusandae ipsam deleniti animi similique! Fuga nisi hic beatae sunt
-                        dolores aut nam, nesciunt non corporis!</p>
-                    <button type="button" class="btn btn-primary mt-4 ">Wana Know more.</button>
 
 
-                </div>
+        </div>
 
-                <div class="col-lg-5 mt-4">
-                    <!-- <img class="img1 mx-5" src="./Images/2185156.jpg" alt="Error"> -->
-                    <div id="demo" class="carousel slide" data-bs-ride="carousel">
+        <div class="row mt-5 ">
 
-                        <!-- The slideshow/carousel -->
-                        <div class="carousel-inner">
-                            <div class="carousel-item active">
-                                <img src="./Images/barot1.jpg" alt="Error" class="d-block abc">
-                            </div>
-                            <div class="carousel-item">
-                                <img src="./Images/barout.jpg" alt="Error" class="d-block abc">
-                            </div>
-                            <div class="carousel-item">
-                                <img src="./Images/barout2.jpg" alt="Error" class="d-block abc">
-                            </div>
+            <div class="col-lg-6 img1div">
+                <h1 class="img1heading mt-5 ">Solan</h1>
+                <p class="img1para mt-4 ">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas iste
+                    blanditiis unde ad nulla recusandae ipsam deleniti animi similique! Fuga nisi hic beatae sunt
+                    dolores aut nam, nesciunt non corporis!</p>
+                <button type="button" class="btn btn-primary mt-4 ">Wana Know more.</button>
+
+
+            </div>
+
+            <div class="col-lg-5 mt-4">
+                <!-- <img class="img1 mx-5" src="./Images/2185156.jpg" alt="Error"> -->
+                <div id="demo" class="carousel slide" data-bs-ride="carousel">
+
+                    <!-- The slideshow/carousel -->
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img src="./Images/barot1.jpg" alt="Error" class="d-block abc">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="./Images/barout.jpg" alt="Error" class="d-block abc">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="./Images/barout2.jpg" alt="Error" class="d-block abc">
                         </div>
                     </div>
-
                 </div>
 
             </div>
+
+        </div>
 
 
 
@@ -628,14 +629,14 @@
                 <hr class="w-25 mx-auto">
 
                 <div class="container mt-5">
-                    <form >
+                    <form>
                         <div>
                             <label for="name" class="contacttext">Name:</label>
                             <input type="name" class="form-control w-25 mx-auto" placeholder="Enter name">
                         </div>
                         <div class="mb-3 mt-3 ">
                             <label for="email" class="contacttext">Email:</label>
-                            <input type="email" class="form-control w-25 mx-auto" placeholder="Enter email" >
+                            <input type="email" class="form-control w-25 mx-auto" placeholder="Enter email">
                         </div>
                         <div class="mb-3">
                             <label for="pwd" class="contacttext">Password:</label>
